# Tema3

src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Worker.cpp  Worker.hpp
